WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198800
REGRESSION (
r246103
) [ Mojave+ WK1 ] Layout Test scrollbars/scrollbar-iframe-click-does-not-blur-content.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=198800
Summary
REGRESSION (r246103) [ Mojave+ WK1 ] Layout Test scrollbars/scrollbar-iframe-...
Shawn Roberts
Reported
2019-06-12 13:14:35 PDT
The following layout test is failing on Mojave+ WK1 scrollbars/scrollbar-iframe-click-does-not-blur-content.html Probable cause: After changes in
r246103
the the above layout test is timing out every run on WK1 testers Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=scrollbars%2Fscrollbar-iframe-click-does-not-blur-content.html
Attachments
Patch
(9.40 KB, patch)
2019-06-13 03:11 PDT
,
Antoine Quint
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-12 13:15:25 PDT
<
rdar://problem/51679634
>
Shawn Roberts
Comment 2
2019-06-12 13:22:17 PDT
Updated expectations in
https://trac.webkit.org/changeset/246371/webkit
Antoine Quint
Comment 3
2019-06-13 02:58:48 PDT
We don't detect an NSScroller in a sub-frame due to the WebHTMLView's implementation of -[NSView hitTest:]. We need to use the real method when detecting which view we're trying to swizzle the event for.
Antoine Quint
Comment 4
2019-06-13 03:11:56 PDT
Created
attachment 372042
[details]
Patch
Tim Horton
Comment 5
2019-06-13 10:36:34 PDT
Comment on
attachment 372042
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=372042&action=review
> Tools/ChangeLog:10 > + which lets use use the default implementation and correctly returns an NSScroller in a sub-frame.
use use
> Tools/DumpRenderTree/mac/EventSendingController.mm:570 > + view = [(WebHTMLView*)view _hitViewForEvent:event];
WebHTMLView *
Antoine Quint
Comment 6
2019-06-13 23:51:01 PDT
Committed
r246429
: <
https://trac.webkit.org/changeset/246429
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug